--- a/examen1ds39/Views/Home/Index.cshtml
+++ b/examen1ds39/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    @ViewData["MENSAJE"]
+    @if (ViewData["MENSAJE"] != null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @ViewData["MENSAJE"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
