--- a/examen1ds39/Views/Clientes/Index.cshtml
+++ b/examen1ds39/Views/Clientes/Index.cshtml
@@ -19,7 +19,7 @@
         <form asp-action="Index" method="get">
             <div class="form-actions no-color">
                 <p>
-                    Busqueda por coincidencia de nombre: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+                    Busqueda por coincidencia: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
                     <input type="submit" value="Search" class="btn btn-default" /> |
                     <a asp-action="Index">Back to Full List</a>
                 </p>
